--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5.4 
	- Correct issue with some mp3s bitrates not being detected, which
		in turn breaks length calculations
	- Removed unused/dead files
	- Correct issue with single song downloads

--------------------------------------------------------------------------
  v.3.5.3 20/12/2009 
	- Added local authtype which uses PHP's PAM module
	- Correct potential security issues due to misuse of REQUEST for write
		operations rather then POST
		(Thx Raphael Geissert <geissert@debian.org>)

--------------------------------------------------------------------------
  v.3.5.2 19/11/2009
	- Fix typo that caused song count to not be set on tag xml response
	- Fix tag methods so that alpha_match and exact_match work
	- Fix limit and offset not working on search_songs API method
	- Fix import m3u on catalog build so it does something
	- Fix inconsistent view during catalog operations
	- Sort malformed files into "Unknown (Broken)" rather then leaving
		them in "Unknown (Orphaned)"
	- Fix API democratic voting methods (Thx kindachris)
	- Add server version information to API ping command
	- Fix Localplay API methods (Thx thomasa) 
	- Improve bin/catalog_update.inc to allow only verify, clean or add
		(Thx ascheel)
	- Fix issue with batch download and UNC paths (Thx greengeek)
	- Added config option to turn caching on/off, Default is off
	- Fix issue where file tag pattern was ignored if files have no tag
		structure
	- Add TDRC to list of parsed id3v2 tags
	- Fix issue where rating could get cached and not update the
		display correctly until a page reload
	- Fix User Stats having a formating issue and not listing the
		active playlist correctly